--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -356,8 +356,10 @@ header {
     font-weight: 400;
     line-height: 35.14px;
     margin:5px;
-    padding: 0px 20px 0px 20px;
+    padding: 0px 20px 5px 20px;
     z-index: 0;
+    display: flex;
+    align-items: center;
 }
 .header-button:hover {
     color: white;
@@ -387,7 +389,9 @@ header {
     line-height: 34.15px;
     margin:5px;
     background-color: #EF4444;
-    padding: 0px 20px 0px 20px;
+    padding: 0px 20px 5px 20px;
+    display: flex;
+    align-items: center;
 }
 .download-button:hover {
     background-color: #992727;
@@ -467,7 +471,7 @@ header {
 }
 .color-about-title{
     text-align: left;
-    line-height: 0.6;
+    line-height: 0.8;
     margin-bottom: 38px;
 }
 .about {
